# ygzl_2026_1

./: -remote --heads origin  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CRACK_V2_PLAN.md  README.md  analyze_unity_project.py  copy_repo_src.py  e --short HEAD; git status --short'  package-lock.json  package.json  project_tree.py  project_tree.txt  python directory_tree.py  requirements.txt  start-server.bat  start_system.py  supabase_migration_add_page_path.sql  ter  test_glb_access.html  tidy-skipping-popcorn.md  tunnel_data_query_prompts.md  unity-render-streaming-advanced.md  unity-render-streaming-setup.md  vercel.json  修改意见.md
.claude/: ralph-loop.local.md  settings.local.json
api/: index.py  modules.py  pyproject.toml  requirements.txt
backend/: README.md  analyze_mdb.py  clean_corrupted_tickets.py  fallback_app.py  fix_ticket_encoding.py  init_assistant_db.py  requirements.aliyun.txt  requirements.ml.aliyun.txt  requirements.txt  requirements_ml_upgrade.txt  schema_kg_supabase.sql  signaling-server.js  start_system.py  test_ml_modules.py  wsgi.py
data/: create_monitoring_points.sql  generate_data.py
docs/: CONSTRUCTION_SITE_REFACTOR_DESIGN.md  ML_IMPLEMENTATION_SUMMARY.md  Mock数据方案实施说明.md  RAG系统实施计划.md  RAG系统第二阶段实施总结.md  TICKET_SYSTEM_SETUP.md  VERCEL_DEPLOYMENT_NOTES.md  Vercel部署问题修复.md  insar_ux_redesign_plan.md  knowledge_graph_upgrade_plan.md  overview_v2_masterplan.md  vibration_v2_plan.md  vibration_v2_progress.md  对话页面隔离功能迁移指南.md  悬浮小助手数据库初始化指南.md  登录系统使用说明.md  知识图谱Schema设计.md  科研创新升级_实施记录.md  科研创新升级_总体进度总结.md  科研创新升级_总体进度跟踪.md  (+19 more)
(+643 files in other folders)
