[project]
name = "terrain-settlement-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "Flask",
  "Flask-Cors",
  "Werkzeug",
  "mysql-connector-python",
  "requests",
  "numpy",
  "pandas",
  "SQLAlchemy",
  "pyshp",
  "scikit-learn",
  "statsmodels",
  "scipy",
  "networkx",
]

[tool.uv]
package = false
